--- a/src/main/resources/templates/html/tag.html
+++ b/src/main/resources/templates/html/tag.html
@@ -1,18 +1,13 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-	pageEncoding="UTF-8"%>
-<%
-	request.setAttribute("APP_PATH", request.getContextPath());
- %>
 <!DOCTYPE html>
 <html>
 	<title>Matthew_Blog</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/nav.css">
-	<link rel="stylesheet" href="css/w3blog.css">
+	<link rel="stylesheet" href="/static/css/nav.css">
+	<link rel="stylesheet" href="/static/css/w3blog.css">
  	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css?family=Raleway"> 
-	<script src="js/jquery.min.js"></script>
+	<script src="/static/js/jquery.min.js"></script>
 	<style>
 	body,h1,h2,h3,h4,h5 {
 		font-family: "Raleway", sans-serif
