--- a/src/main/resources/templates/html/admin/backadmin.html
+++ b/src/main/resources/templates/html/admin/backadmin.html
@@ -13,17 +13,17 @@
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-	 <link href="css/bootstrap.min.css" rel="stylesheet">
-	 <link href="css/nav.css" rel="stylesheet">
+	 <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+	 <link href="/static/css/nav.css" rel="stylesheet">
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 	<script src="https://cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
-	<link href="js/editormd/css/editormd.min.css" rel="stylesheet"
+	<link href="/static/js/editormd/css/editormd.min.css" rel="stylesheet"
 		type="text/css" />
-	<script src="js/editormd/editormd.js"></script>
-	<script src="js/editormd/editormd.amd.js"></script>
+	<script src="/static/js/editormd/editormd.js"></script>
+	<script src="/static/js/editormd/editormd.amd.js"></script>
 </head>
 <body>
 	<header>
