--- a/src/main/resources/templates/html/admin/edit.html
+++ b/src/main/resources/templates/html/admin/edit.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Matthew_Blog</title>
 	 <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-	<link href="js/editormd/css/editormd.min.css" rel="stylesheet"
+    <script src="/static/js/bootstrap.min.js"></script>
+	<link href="/static/js/editormd/css/editormd.min.css" rel="stylesheet"
 		type="text/css" />
 	<script src="https://cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
-	<script src="js/editormd/editormd.js"></script>
-	<script src="js/editormd/editormd.amd.js"></script>
+	<script src="/static/js/editormd/editormd.js"></script>
+	<script src="/static/js/editormd/editormd.amd.js"></script>
 
 	<style>
 		h1{
