--- a/src/main/resources/templates/html/admin/login.html
+++ b/src/main/resources/templates/html/admin/login.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Matthew_Blog</title>
-	<link href="css/login.css" rel="stylesheet" type="text/css" />
+	<link href="/static/css/login.css" rel="stylesheet" type="text/css" />
 	<!--  Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 
 </head>
 <body>
@@ -17,7 +17,7 @@
 	        <div class="col-sm-6 col-md-4 col-md-offset-4">
 	            <h1 class="text-center login-title">登陆界面</h1>
 	            <div class="account-wall">
-	                <img class="profile-img" src="images/me.jpg"
+	                <img class="profile-img" src="/static/images/me.jpg"
 	                    alt="">
 	                <form class="form-signin" action="${APP_PATH }/validatellogin" method="post">
 	                <input type="text" class="form-control" placeholder="username" name="username" required autofocus>
