--- a/src/main/resources/templates/html/showarticle.html
+++ b/src/main/resources/templates/html/showarticle.html
@@ -27,10 +27,10 @@
 	 <div id="layout">
            <header>
                	<ul class="navul">
-					<li class="navli"><a href="${APP_PATH }/">Home</a></li>
+					<li class="navli"><a href="/">Home</a></li>
 					<li class="navli"><a href="https://github.com">github</a></li>
-					<li class="navli"><a target="_blank" href="${APP_PATH }/contact">Contact me</a></li>
-					<li class="navli"><a target="_blank" href="${APP_PATH }/about">About me</a></li>
+					<li class="navli"><a target="_blank" href="/contact">Contact me</a></li>
+					<li class="navli"><a target="_blank" href="/about">About me</a></li>
 				</ul>   
             </header>
         
