--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -26,8 +26,8 @@ and is wrapped around the whole page content, except for the footer in this exam
         <ul class="navul">
             <li class="navli"><a href="/">Home</a></li>
             <li class="navli"><a href="https://github.com/">github</a></li>
-            <li class="navli"><a target="_blank" href="/templates/html/contact.html">Contact me</a></li>
-            <li class="navli"><a target="_blank" href="/templates/html/about.html   ">About me</a></li>
+            <li class="navli"><a target="_blank" href="/contact">Contact me</a></li>
+            <li class="navli"><a target="_blank" href="/about">About me</a></li>
         </ul>
         <h1>
             <b>MY BLOG</b>
