--- a/src/main/resources/templates/html/admin/backadmin.html
+++ b/src/main/resources/templates/html/admin/backadmin.html
@@ -28,10 +28,10 @@
 <body>
 	<header>
 		<ul class="navul">
-				<li class="navli"><a href="${APP_PATH }/validatellogin">文章管理</a></li>
-				<li class="navli"><a href="${APP_PATH }/commentback">评论管理</a></li>
-				<li class="navli"><a href="${APP_PATH }/tagadmin">分类管理</a></li>
-				<li class="navli"><a href="${APP_PATH }/logout">log out</a></li>
+				<li class="navli"><a href="/validatellogin">文章管理</a></li>
+				<li class="navli"><a href="/commentback">评论管理</a></li>
+				<li class="navli"><a href="/tagAdmin">分类管理</a></li>
+				<li class="navli"><a href="/logout">log out</a></li>
 			</ul>
 	</header>
 	<div class="container">
@@ -57,7 +57,7 @@
 		  <div class="modal-dialog">
 		
 		    <!-- Modal content-->
-		    <div class="modal-content">
+		    <div class="modal-content">PP_PATH", request.getContextPath());
 		      <div class="modal-header">
 		        <button type="button" class="close" data-dismiss="modal">&times;</button>
 		        <h4 class="modal-title">删除提醒!</h4>
