--- a/src/main/resources/templates/html/admin/editsuccess.html
+++ b/src/main/resources/templates/html/admin/editsuccess.html
@@ -5,6 +5,6 @@
 <title>Matthew_Blog</title>
 </head>
 <body>
-	${map.message }<a href="${APP_PATH }/validatellogin">继续修改文章</a>
+	${map.message }<a href="/validatellogin">继续修改文章</a>
 </body>
 </html>
