--- a/src/main/resources/templates/html/admin/login.html
+++ b/src/main/resources/templates/html/admin/login.html
@@ -19,7 +19,7 @@
 	            <div class="account-wall">
 	                <img class="profile-img" src="/static/images/me.jpg"
 	                    alt="">
-	                <form class="form-signin" action="${APP_PATH }/validatellogin" method="post">
+	                <form class="form-signin" action="/validatellogin" method="post">
 	                <input type="text" class="form-control" placeholder="username" name="username" required autofocus>
 	                <input type="password" class="form-control" placeholder="password" name="password" required>
 	                <button class="btn btn-lg btn-primary btn-block" type="submit">
