--- a/src/main/resources/templates/html/admin/newblog.html
+++ b/src/main/resources/templates/html/admin/newblog.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-	<form class="form-horizontal" action="<%=path%>/saveArticle" method="post" style="text-align:center">
+	<form class="form-horizontal" action="/saveArticle" method="post" style="text-align:center">
 		  <h1>新建保存文章<button type="submit" style="float: right;" class="btn btn-default">发布</button></h1>
 		  <br>
 		  <div class="form-group">
