--- a/src/main/resources/templates/html/admin/newsuccess.html
+++ b/src/main/resources/templates/html/admin/newsuccess.html
@@ -8,6 +8,6 @@
 <title>Matthew_Blog</title>
 </head>
 <body>
-	${message }<a href="${APP_PATH }/validatellogin">继续新建文章</a>
+	${message }<a href="/validatellogin">继续新建文章</a>
 </body>
 </html>
