--- a/src/main/resources/templates/html/admin/newtagsuccess.html
+++ b/src/main/resources/templates/html/admin/newtagsuccess.html
@@ -8,6 +8,6 @@
 <title>Matthew_Blog</title>
 </head>
 <body>
-	${msg } <a href="${APP_PATH }/tagadmin">继续新建分类</a>
+	${msg } <a href="/tagAdmin">继续新建分类</a>
 </body>
 </html>
