--- a/src/main/resources/templates/html/admin/commentadmin.html
+++ b/src/main/resources/templates/html/admin/commentadmin.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<%
-	request.setAttribute("APP_PATH", request.getContextPath());
-%>
+
 <title>Matthew_Blog</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,10 +26,10 @@
 <body>
 	<header>
 		<ul class="navul">
-				<li class="navli"><a href="${APP_PATH }/validatellogin">文章管理</a></li>
-				<li class="navli"><a href="${APP_PATH }/commentback">评论管理</a></li>
-				<li class="navli"><a href="${APP_PATH }/tagadmin">分类管理</a></li>
-				<li class="navli"><a href="${APP_PATH }/logout">log out</a></li>
+				<li class="navli"><a href="/validatellogin">文章管理</a></li>
+				<li class="navli"><a href="/commentback">评论管理</a></li>
+				<li class="navli"><a href="/tagAdmin">分类管理</a></li>
+				<li class="navli"><a href="/logout">log out</a></li>
 			</ul>
 	</header>
 	<div class="container">
