--- a/src/main/resources/templates/html/admin/edit.html
+++ b/src/main/resources/templates/html/admin/edit.html
@@ -26,7 +26,7 @@
 <body>
 	<h1>编辑保存文章</h1>
 	<br>
-	<form class="form-horizontal" action="<%=path%>/updatearticle" method="post" style="text-align:center">
+	<form class="form-horizontal" action="/updateArticle" method="post" style="text-align:center">
 		  <input type="hidden" name="id" value="${blogid }"/> 
 		  <div class="form-group">
 		    <label for="title" class="col-sm-2 control-label">title</label>
