--- a/src/main/resources/templates/html/admin/newUser.html
+++ b/src/main/resources/templates/html/admin/newUser.html
@@ -19,7 +19,7 @@
             <div class="account-wall">
                 <img class="profile-img" src="/static/images/me.jpg"
                      alt="">
-                <form class="form-signin" action="${APP_PATH }/signUp" method="post">
+                <form class="form-signin" action="/signUp" method="post">
                     <input type="text" class="form-control" placeholder="username" name="username" required autofocus>
                     <input type="password" class="form-control" placeholder="password" name="password" required>
                     <button class="btn btn-lg btn-primary btn-block" type="submit">
@@ -29,5 +29,6 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
