--- a/src/main/resources/templates/html/admin/tagadmin.html
+++ b/src/main/resources/templates/html/admin/tagadmin.html
@@ -26,10 +26,10 @@
 <body>
 	<header>
 		<ul class="navul">
-				<li class="navli"><a href="${APP_PATH }/validatellogin">文章管理</a></li>
-				<li class="navli"><a href="${APP_PATH }/commentback">评论管理</a></li>
-				<li class="navli"><a href="${APP_PATH }/tagadmin">分类管理</a></li>
-				<li class="navli"><a href="${APP_PATH }/logout">log out</a></li>
+				<li class="navli"><a href="/validatellogin">文章管理</a></li>
+				<li class="navli"><a href="/commentback">评论管理</a></li>
+				<li class="navli"><a href="/tagadmin">分类管理</a></li>
+				<li class="navli"><a href="/logout">log out</a></li>
 			</ul>
 	</header>
 	<div class="container">
@@ -53,7 +53,7 @@
 		        <h4 class="modal-title">新建分类!</h4>
 		      </div>
 		      <div class="modal-body">
-		        <form class="form-horizontal" action="${APP_PATH }/newtag" method="post">
+		        <form class="form-horizontal" action="/newtag" method="post">
 					  <div class="form-group">
 					    <label class="control-label col-sm-2" for="name">name:</label>
 					    <div class="col-sm-10"> 
