--- a/src/main/resources/templates/html/contact.html
+++ b/src/main/resources/templates/html/contact.html
@@ -13,10 +13,10 @@
 
 <div class="container">
     <ul class="navul">
-        <li class="navli"><a href="${APP_PATH}/">Home</a></li>
+        <li class="navli"><a href="/">Home</a></li>
         <li class="navli"><a href="https://github.com">github</a></li>
-        <li class="navli"><a target="_blank" href="${APP_PATH }/contact">Contact me</a></li>
-        <li class="navli"><a target="_blank" href="${APP_PATH }/about">About me</a></li>
+        <li class="navli"><a target="_blank" href="/contact">Contact me</a></li>
+        <li class="navli"><a target="_blank" href="/about">About me</a></li>
     </ul>
     <h2>联系我</h2>
     <p>希望有大神带我飞</p>
@@ -51,7 +51,7 @@
                 <div class="col-lg-12 form-group">
                     <button class="btn btn-success" type="submit" onclick="sendheartword(520)">Send</button>
                     <br><br>
-                    <p style="text-align: center;"><a href="${APP_PATH }">
+                    <p style="text-align: center;"><a href="/">
                         @2019  京ICP备19016300号</a></p>
                 </div>
             </div>
