--- a/src/main/resources/templates/html/admin/backAdmin.html
+++ b/src/main/resources/templates/html/admin/backAdmin.html
@@ -25,7 +25,7 @@
 <body>
 	<header>
 		<ul class="navul">
-				<li class="navli"><a href="/validatellogin">文章管理</a></li>
+				<li class="navli"><a href="/articleAdmin">文章管理</a></li>
 				<li class="navli"><a href="/commentback">评论管理</a></li>
 				<li class="navli"><a href="/tagAdmin">分类管理</a></li>
 				<li class="navli"><a href="/logout">log out</a></li>
