--- a/src/main/resources/templates/html/contact.html
+++ b/src/main/resources/templates/html/contact.html
@@ -15,8 +15,8 @@
     <ul class="navul">
         <li class="navli"><a href="/">Home</a></li>
         <li class="navli"><a href="https://github.com">github</a></li>
-        <li class="navli"><a target="_blank" href="/contact">Contact me</a></li>
-        <li class="navli"><a target="_blank" href="/about">About me</a></li>
+        <li class="navli"><a target="_self" href="/contact">Tags</a></li>
+        <li class="navli"><a target="_self" href="/about">About me</a></li>
     </ul>
     <h2>联系我</h2>
     <p>希望有大神带我飞</p>
