--- a/src/main/resources/templates/html/about.html
+++ b/src/main/resources/templates/html/about.html
@@ -15,8 +15,8 @@
     <ul class="navul">
         <li class="navli"><a href="/">Home</a></li>
         <li class="navli"><a href="https://github.com">github</a></li>
-        <li class="navli"><a target="_blank" href="/contact">Contact me</a></li>
-        <li class="navli"><a target="_blank" href="/about">About me</a></li>
+        <li class="navli"><a target="_self" href="/contact">Tags</a></li>
+        <li class="navli"><a target="_self" href="/about">About me</a></li>
     </ul>
     <h2>于涌超</h2>
     <p>求职意向：&nbsp&nbspJava工程师</p>
