--- a/src/main/resources/templates/html/tag.html
+++ b/src/main/resources/templates/html/tag.html
@@ -22,10 +22,10 @@
 		<!-- Header -->
 		<header class="w3-container w3-center w3-padding-32">
 			<ul class="navul">
-				<li class="navli"><a href="/    ">Home</a></li>
+				<li class="navli"><a href="/">Home</a></li>
 				<li class="navli"><a href="https://github.com">github</a></li>
-				<li class="navli"><a target="_blank" href="/contact">Contact me</a></li>
-				<li class="navli"><a target="_blank" href="/about">About me</a></li>
+				<li class="navli"><a target="_self" href="/contact">Tags</a></li>
+				<li class="navli"><a target="_self" href="/about">About me</a></li>
 			</ul>
 			<h1>
 				<b>MY BLOG</b>
