--- a/src/main/resources/templates/html/tag.html
+++ b/src/main/resources/templates/html/tag.html
@@ -112,18 +112,16 @@
 		
 	</footer>
 	<script type="text/javascript">
-        request.setAttribute("APP_PATH", request.getContextPath());
 		$(function() {
 			pages(1);
 			gettags();
-			build_post();
 		});
 		
 		// 文章分页功能
 		function pages(pageid) {
 			$.ajax({
 				type: "GET",
-				url: "${APP_PATH}/tagarticle",
+				url: "/getArticlesByTag",
 				data: {
 					id : id,
 					pn : pageid
@@ -132,7 +130,7 @@
 				success: function(result) {
 					build_blog(result);
 					// 分页按钮和信息
-					prenext(result.extend.pageInfo);
+					prenext(result.content.pageInfo);
 				
 				}
 			});
@@ -142,7 +140,7 @@
 		function build_blog(result) {
 				// 清空分页
 					$("#blog").empty();
-					var articles = result.extend.pageInfo.list;
+					var articles = result.content.pageInfo.list;
 					$.each(articles, function(index, item) {
 						var div1 = $("<div></div>").addClass("w3-card-4 w3-margin w3-white");
 						div1.appendTo("#blog");
@@ -186,7 +184,7 @@
 						var btn12 = $("<button></button>").addClass(
 						"w3-button w3-padding-large w3-white w3-border");
 						var b12 = $("<b></b>");
-						var a12 = $("<a></a>").attr("href","${APP_PATH}/showarticle?id=" + item.id).append("READ MORE »");
+						var a12 = $("<a></a>").attr("href","/showArticle?id=" + item.id).append("READ MORE »");
 						a12.appendTo(b12);
 						b12.appendTo(btn12);
 						btn12.appendTo(p212);
@@ -258,9 +256,7 @@
 			var label = $("<p></p>").append("&nbsp;&nbsp;当前第&nbsp;" + pageinfo.pageNum 
 			+ "&nbsp;页，" + "共 &nbsp;" + pageinfo.total + "&nbsp;条记录" );
 			label.appendTo("#foot");
-			
-			var p = $("<p></p>").css("text-align","center").append("Powered by Springmvc&Mybatis&w3.css");
-			p.appendTo("#foot");
+
 			var p1 = $("<p></p>").css("text-align","center").append("@2019 京ICP备19016300号");
 			p1.appendTo("#foot"); 
 		}
@@ -269,11 +265,11 @@
 		function gettags() {
 			$.ajax({
 				type: "GET",
-				url: "${APP_PATH}/getTags",
+				url: "/getTags",
 				dataType: "json",
 				success: function(result) {
 					$("#tags").empty();
-					var tags = result.extend.tags;
+					var tags = result.content;
 					/* <span class="w3-tag w3-black w3-margin-bottom">Travel</span>  */
 					$.each(tags, function(index, item) {
 						var span;
@@ -281,55 +277,14 @@
 						if(index == 0)
 						 	span = $("<span></span>").addClass("w3-tag w3-black w3-margin-bottom");
 				
-						var a = $("<a></a>").attr("href", "${APP_PATH}/tag?id="+item.id);
+						var a = $("<a></a>").attr("href", "/tag?id="+item.id);
 						a.append(item.name).appendTo(span);
 						span.appendTo("#tags");
 					});
 				}
 			});
 		}
-		
-			// 构建 popular 文章
-		function build_post() {
-			$.ajax({
-				type: "GET",
-				url: "${APP_PATH}/postarticle",
-				dataType: "json",
-				success: function(result) {
-					var list = result.extend.postList;
-					$.each(list, function(index, item){
-						var span1 = $("<span></span>").addClass("w3-large");
-					 	var span2 = $("<span></span>").addClass("w3-large");
-					 	if(index == 0) {
-					 		var a = $("<a></a>").attr("href","${APP_PATH}/showarticle?id="+item.id);
-					 		a.append(item.title).appendTo(span1);
-					 		span1.appendTo("#li1");			
-					 	}
-					 	
-					 	if(index == 1) {
-					 		var a1 = $("<a></a>").attr("href","${APP_PATH}/showarticle?id="+item.id);
-					 		a1.append(item.title).appendTo(span1);
-					 		span1.appendTo("#li2");
-					 	}
-					 	 
-					 	 if(index == 2) {
-					 		var a2 = $("<a></a>").attr("href","${APP_PATH}/showarticle?id="+item.id);
-					 		a2.append(item.title).appendTo(span1);
-					 		span1.appendTo("#li3");
-					 	}
-					 	
-					 		 
-					 	 if(index == 3) {
-					 		var a3 = $("<a></a>").attr("href","${APP_PATH}/showarticle?id="+item.id);
-					 		a3.append(item.title).appendTo(span1);
-					 		span1.appendTo("#li4");
-					 	}
-					});
-				} 
-			});	
-		}
-		
-		
+
 		// 解析时间戳函数 解析后格式为 xxxx-x(小于10，这个为0)x-xx
 		function parseDateNormal(dateStr) {
 			// 比如需要这样的格式 yyyy-MM-dd hh:mm:ss
