--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -112,7 +112,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     }
 
     // 博客函数
-    function build_blog(result) {
+    function build_blog(result,count) {
         // 清空分页
         $("#blog").empty();
         var articles = result.content.list;
