--- a/src/main/resources/templates/html/about.html
+++ b/src/main/resources/templates/html/about.html
@@ -15,7 +15,7 @@
     <ul class="navul">
         <li class="navli"><a href="/">Home</a></li>
         <li class="navli"><a href="https://github.com">github</a></li>
-        <li class="navli"><a target="_self" href="/contact">Tags</a></li>
+        <li class="navli"><a target="_self" href="/tags">Tags</a></li>
         <li class="navli"><a target="_self" href="/about">About me</a></li>
     </ul>
     <h2>于涌超</h2>
@@ -77,17 +77,43 @@
     </div>
     <br>
     <div>
+        <h3 style="text-align: center;">想对我说什么</h3>
         <div class="col-lg-12">
+            <div class="row">
+                <div class="col-md-12 form-group">
+                    <input class="form-control" id="name" name="name"
+                           placeholder="Name" type="text" required>
+                </div>
+            </div>
+            <textarea class="form-control" id="comments" name="comment"
+                      placeholder="留下你的心声..." rows="8"></textarea>
             <br>
             <div class="row">
                 <div class="col-lg-12 form-group">
+                    <button class="btn btn-success" type="submit" onclick="sendheartword(520)">Send</button>
                     <br><br>
                     <p style="text-align: center;"><a href="/">
                         @2019  京ICP备19016300号</a></p>
                 </div>
             </div>
         </div>
-    </div>
 </div>
+    <script>
+        function sendheartword(sid) {
+            $.ajax({
+                type: "post",
+                url: "/sendheartword",
+                data: {
+                    id : sid,
+                    name : $("#name").val(),
+                    comment: $("#comments").val()
+                },
+                dataType: "json",
+                success : function(result) {
+                    alert(result.msg);
+                }
+            });
+        }
+    </script>
 </body>
 </html>
